--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,18 +33,12 @@
         <activity android:name=".MainActivity">
         </activity>
 
-        <service android:name=".service.FirebaseService">
+        <service android:name=".service.FirebaseService"
+                 android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">>
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
-
-        <service android:name=".service.FirebaseInstanceIdService">
-            <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
-            </intent-filter>
-        </service>
-
 
     </application>
 
